Maxwell-Cremona and Tutte references

--- a/compgeom.bib
+++ b/compgeom.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-05-02 18:45:21 -0500 
+%% Created for Jeff Erickson at 2018-12-05 12:06:05 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{b-cccda-94,
+	Author = {Brandt, Jonathan W.},
+	Date-Added = {2018-12-05 12:04:53 -0600},
+	Date-Modified = {2018-12-05 12:06:05 -0600},
+	Doi = {10.1006/ciun.1994.1007},
+	Journal = {CVGIP: Image Understanding},
+	Number = {1},
+	Pages = {116--124},
+	Title = {Convergence and continuity criteria for discrete approximations of the continuous planar skeletons},
+	Volume = {59},
+	Year = {1994}}
 
 @article{r-odtr-94,
 	Author = {Rajan, V. T.},
