--- a/topology.bib
+++ b/topology.bib
@@ -2,10 +2,119 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-12-02 16:08:25 -0600 
+%% Created for Jeff Erickson at 2019-03-11 13:45:10 +0100 
+
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+
+
+@incollection{l-dafe-04,
+	Author = {Lovász, László},
+	Booktitle = {Eigenvalues of Laplacians and other geometric operators},
+	Date-Added = {2019-03-11 13:42:10 +0100},
+	Date-Modified = {2019-03-11 13:44:56 +0100},
+	Doi = {10.4310/SDG.2004.v9.n1.a7},
+	Editor = {Grigor’yan, Alexander and Yau, Shing-Tung},
+	Pages = {241--273},
+	Publisher = {Int. Press},
+	Series = {Surveys in Differential Geometry},
+	Title = {Discrete analytic functions: An exposition},
+	Volume = {9},
+	Year = {2004}}
+
+@article{bl-hafg-03,
+	Author = {Benjamani, Itai and Lovász, László},
+	Date-Added = {2019-03-11 13:39:48 +0100},
+	Date-Modified = {2019-03-11 13:40:35 +0100},
+	Doi = {10.1007/s00022-033-1697-8},
+	Journal = {J. Geom.},
+	Number = {1--2},
+	Pages = {3--15},
+	Title = {Harmonic and analytic functions on graphs},
+	Volume = {76},
+	Year = {2003}}
+
+@book{c-gs-72,
+	Author = {Cremona, Luigi},
+	Date-Added = {2019-03-11 13:26:22 +0100},
+	Date-Modified = {2019-03-11 13:29:16 +0100},
+	Note = {English translation by Thomas Hudson Beare, Oxford Univ. Press, 1890},
+	Title = {Graphical Statics},
+	Year = {1872}}
+
+@article{cw-ssppd-94,
+	Author = {Crapo, Henry and Whiteley, Walter},
+	Date-Added = {2019-03-11 12:59:41 +0100},
+	Date-Modified = {2019-03-11 13:11:03 +0100},
+	Journal = {Beitr. Algebra Geom.},
+	Keywords = {Maxwell-Cremona, converse of Maxwell's lifting theorem},
+	Number = {2},
+	Pages = {259--281},
+	Title = {Spaces of stresses, projections and parallel drawings for spherical polyhedra},
+	Url = {https://www.emis.de/journals/BAG/vol.35/no.2/},
+	Volume = {35},
+	Year = {1994}}
+
+@article{cw-psspp-93,
+	Author = {Crapo, Henry and Whiteley, Walter},
+	Date-Added = {2019-03-11 12:48:25 +0100},
+	Date-Modified = {2019-03-11 13:06:23 +0100},
+	Journal = {Topologie structurale / Structural Topology},
+	Keywords = {Maxwell-Cremona, converse of Maxwell's lifting theorem},
+	Pages = {55--77},
+	Title = {Plane self stresses and projected polyhedra {I:} {The} basic pattern},
+	Url = {http://www-iri.upc.es/people/ros/StructuralTopology/ST20/st20.html},
+	Volume = {20},
+	Year = {1993}}
+
+@book{r-mam-58,
+	Author = {Rankine, William John Macquorn},
+	Comments = {pre-Maxwell "diagram of forces"},
+	Date-Added = {2019-03-11 12:21:29 +0100},
+	Date-Modified = {2019-03-11 12:48:05 +0100},
+	Publisher = {Richard Griffin and Co.},
+	Title = {A Manual of Applied Mechanics},
+	Url = {https://archive.org/details/manualappmecha00rankrich},
+	Year = {1858}}
+
+@article{m-rffdf-70,
+	Author = {Maxwell, James Clerk},
+	Date-Added = {2019-03-11 12:00:22 +0100},
+	Date-Modified = {2019-03-11 12:01:42 +0100},
+	Doi = {10.1017/S0080456800026351},
+	Journal = {Trans. Royal Soc. Edinburgh},
+	Number = {1},
+	Pages = {1--40},
+	Title = {I.—{On} Reciprocal Figures, Frames, and Diagrams of Forces},
+	Volume = {26},
+	Year = {1870}}
+
+@article{m-rfdf-64,
+	Author = {Maxwell, James Clerk},
+	Date-Added = {2019-03-11 11:50:53 +0100},
+	Date-Modified = {2019-03-11 12:10:40 +0100},
+	Doi = {10.1080/14786446408643663},
+	Journal = {Phil. Mag. (Ser. 4)},
+	Number = {182},
+	Pages = {250--261},
+	Title = {XLV. {O}n reciprocal figures and diagrams of forces},
+	Volume = {27},
+	Year = {1864}}
+
+@article{s-cbcgg-76,
+	Author = {Smikun, L. B.},
+	Date-Added = {2018-12-03 05:43:57 -0600},
+	Date-Modified = {2018-12-03 06:06:37 -0600},
+	Doi = {10.1007/BF01070252},
+	Journal = {Cybernetics},
+	Note = {Translated from \emph{Kibernetika (Kiev)} (5):33--37, 1976.},
+	Number = {5},
+	Pages = {687--691},
+	Title = {Connection between context-free groups and groups with decidable problems of automata equivalence},
+	Volume = {12},
+	Year = {1976},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF01070252}}
 
 @article{bs-mrpg-11,
 	Author = {Borcea, Ciprian and Streinu, Ileana},
@@ -17,7 +126,8 @@
 	Pages = {1093--1103},
 	Title = {Minimally rigid periodic graphs},
 	Volume = {43},
-	Year = {2011}}
+	Year = {2011},
+	Bdsk-Url-1 = {https://doi.org/10.1112/blms/bdr044}}
 
 @article{r-rpfgf-14,
 	Arxiv = {1202.6652},
@@ -31,7 +141,8 @@
 	Title = {The rigidity of periodic frameworks as graphs on a fixed torus},
 	Url = {https://cdm.ucalgary.ca/cdm/index.php/cdm/article/view/329/179},
 	Volume = {9},
-	Year = {2014}}
+	Year = {2014},
+	Bdsk-Url-1 = {https://cdm.ucalgary.ca/cdm/index.php/cdm/article/view/329/179}}
 
 @article{r-icftft-15,
 	Arxiv = {1203.6561},
@@ -45,7 +156,8 @@
 	Read = {1},
 	Title = {Inductive constructions for frameworks on a two-dimensional fixed torus},
 	Volume = {54},
-	Year = {2015}}
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-015-9697-7}}
 
 @article{bs-lsppf-15,
 	Arxiv = {1501.03549},
@@ -61,7 +173,6 @@
 	Year = {2015},
 	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-015-9689-7}}
 
-
 @inproceedings{ew-tcsr-13,
 	Author = {Erickson, Jeff and Whittlesey, Kim},
 	Booktitle = {Proc. 24th Ann. ACM-SIAM Symp. Discrete Algorithms},
@@ -70,7 +181,8 @@
 	Doi = {10.1137/1.9781611973105.118},
 	Pages = {1646--1655},
 	Title = {Transforming Curves on Surfaces redux},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1137/1.9781611973105.118}}
 
 @article{m-grbht-97,
 	Author = {Moran, Judith Flagg},
@@ -83,7 +195,8 @@
 	Read = {1},
 	Title = {The growth rate and balance of homogeneous tilings in the hyperbolic plane},
 	Volume = {173},
-	Year = {1997}}
+	Year = {1997},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0012-365X(96)00102-1}}
 
 @inproceedings{e-pspmf-10,
 	Author = {Erickson, Jeff},
@@ -1147,10 +1260,12 @@
 	Year = {2001}}
 
 @inproceedings{f-sntcd-13,
+	Arxiv = {1111.6990},
 	Author = {Fox, Kyle},
 	Booktitle = {Proc. 24th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Comments = {No DOI},
 	Date-Added = {2016-11-22 16:55:08 +0000},
-	Date-Modified = {2016-11-22 16:55:09 +0000},
+	Date-Modified = {2018-12-02 20:16:26 -0600},
 	Pages = {352--364},
 	Read = {1},
 	Title = {Shortest Non-trivial Cycles in Directed and Undirected Surface Graphs},
@@ -1306,6 +1421,7 @@
 @misc{ad-cpp-16,
 	Arxiv = {1609.09679},
 	Author = {Patrizio Angelini, Giordano Da Lozzo},
+	Date-Modified = {2019-03-11 13:08:11 +0100},
 	Howpublished = {Preprint},
 	Month = {Sep},
 	Title = {Clustered Planarity with Pipes},
@@ -1323,6 +1439,7 @@
 @misc{f-egeg-16,
 	Arxiv = {1608.02087},
 	Author = {Fulek, Radoslav},
+	Date-Modified = {2019-03-11 13:08:04 +0100},
 	Howpublished = {Preprint},
 	Month = {Aug},
 	Title = {Embedding graphs into embedded graphs},
@@ -1330,8 +1447,8 @@
 
 @misc{at-rwspt-16,
 	Arxiv = {1610.00361},
-	Author = {Hugo A. Akitaya, Csaba D. Tóth},
-	Date-Modified = {2018-07-07 21:58:28 +0000},
+	Author = {Akitaya, Hugo A. and Tóth, Csaba D.},
+	Date-Modified = {2018-12-20 17:02:03 -0600},
 	Howpublished = {Preprint},
 	Month = {Oct},
 	Title = {Reconstruction of weakly simple polygons from their edges},
@@ -1533,7 +1650,8 @@
 
 @article{dss-kikvi-13,
 	Author = {Dunin-Barkowski, Petr and Sleptsov, Alexey and Smirnov, Andrey},
-	Journal = {International Journal of Modern Physics A},
+	Date-Modified = {2019-03-11 13:07:57 +0100},
+	Journal = {Int. J. Modern Physics A},
 	Number = {17},
 	Pages = {1330025-1--38},
 	Title = {Kontsevich integral for knots and Vassiliev invariants},
@@ -1542,7 +1660,8 @@
 
 @article{dll-qmjp-01,
 	Author = {Dasbach, Oliver T. and Le, Thang D. and Lin, Xiao-Song},
-	Journal = {Communications in Mathematical Physics},
+	Date-Modified = {2019-03-11 13:09:33 +0100},
+	Journal = {Commun. Math. Phys.},
 	Number = {2},
 	Pages = {427--442},
 	Title = {Quantum morphing and the Jones polynomial},
@@ -1551,7 +1670,8 @@
 
 @article{s-hski-14,
 	Author = {Sleptsov, Alexey},
-	Journal = {International Journal of Modern Physics A},
+	Date-Modified = {2019-03-11 13:07:08 +0100},
+	Journal = {Int. J. Modern Physics A},
 	Number = {29},
 	Pages = {1430063-1--85},
 	Title = {Hidden structures of knot invariants},
@@ -1560,6 +1680,7 @@
 
 @phdthesis{s-hski-14thesis,
 	Author = {Sleptsov, Alexey},
+	Date-Modified = {2019-03-11 13:09:42 +0100},
 	School = {Universiteit van Amsterdam},
 	Title = {Hidden structures of knot invariants},
 	Type = {{Ph.D.} dissertation},
@@ -1569,6 +1690,7 @@
 	Arxiv = {math/0406190},
 	Author = {(editor), Tomotada Ohtsuki},
 	Comments = {Open problems from workshop and seminars on “Invariants of knots and 3-manifolds” held at Research Institute for Mathematical	Sciences, Kyoto University in September 2001},
+	Date-Modified = {2019-03-11 13:09:54 +0100},
 	Editor = {Ohtsuki, Tomotada},
 	Month = {Jun},
 	Title = {Problems on invariants of knots and 3-manifolds},
@@ -1577,7 +1699,8 @@
 @article{w-ftvi-02,
 	Author = {Willerton, Simon},
 	Comments = {Willerton's fish},
-	Journal = {Experimental Mathematics},
+	Date-Modified = {2019-03-11 13:07:17 +0100},
+	Journal = {Experimental Math.},
 	Number = {2},
 	Pages = {289--296},
 	Title = {On the first two {Vassiliev} invariants},
@@ -1608,6 +1731,7 @@
 @misc{dfm-ag-16,
 	Arxiv = {math.CO/1603.02310},
 	Author = {Ding, Guoli and Fallon, Joshua and Marshall, Emily},
+	Date-Modified = {2019-03-11 13:08:25 +0100},
 	Howpublished = {Preprint},
 	Month = {Mar},
 	Title = {On almost-planar graphs},
@@ -2372,7 +2496,8 @@
 @article{ehln-irkl-14,
 	Arxiv = {1411.3308},
 	Author = {Even-Zohar, Chaim and Hass, Joel and Linial, Nati and Nowik, Tahl},
-	Journal = {Discrete \& Computational Geometry},
+	Date-Modified = {2019-03-11 13:07:42 +0100},
+	Journal = {Discrete Comput. Geom.},
 	Number = {2},
 	Pages = {274--314},
 	Read = {1},
