Cremona original, with URLs

--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-03-11 13:45:10 +0100 
+%% Created for Jeff Erickson at 2019-03-11 13:55:26 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{c-frnsg-72,
+	Author = {Cremona, Luigi},
+	Date-Added = {2019-03-11 13:50:31 +0100},
+	Date-Modified = {2019-03-11 13:54:07 +0100},
+	Note = {English translation in \cite{c-gs-72}},
+	Publisher = {Tipografia di Giuseppe Bernardoni},
+	Title = {Le figure reciproche nella statica grafica},
+	Url = {http://www.luigi-cremona.it/download/Scritti_matematici/1872_statica_grafica.pdf},
+	Year = {1872}}
 
 @incollection{l-dafe-04,
 	Author = {Lovász, László},
@@ -21,7 +31,8 @@
 	Series = {Surveys in Differential Geometry},
 	Title = {Discrete analytic functions: An exposition},
 	Volume = {9},
-	Year = {2004}}
+	Year = {2004},
+	Bdsk-Url-1 = {https://doi.org/10.4310/SDG.2004.v9.n1.a7}}
 
 @article{bl-hafg-03,
 	Author = {Benjamani, Itai and Lovász, László},
@@ -33,15 +44,18 @@
 	Pages = {3--15},
 	Title = {Harmonic and analytic functions on graphs},
 	Volume = {76},
-	Year = {2003}}
+	Year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00022-033-1697-8}}
 
 @book{c-gs-72,
 	Author = {Cremona, Luigi},
 	Date-Added = {2019-03-11 13:26:22 +0100},
-	Date-Modified = {2019-03-11 13:29:16 +0100},
-	Note = {English translation by Thomas Hudson Beare, Oxford Univ. Press, 1890},
+	Date-Modified = {2019-03-11 13:55:24 +0100},
+	Note = {English translation of \cite{c-frnsg-72} by Thomas Hudson Beare},
+	Publisher = {Oxford Univ. Press},
 	Title = {Graphical Statics},
-	Year = {1872}}
+	Url = {https://archive.org/details/graphicalstatic02cremgoog},
+	Year = {1890}}
 
 @article{cw-ssppd-94,
 	Author = {Crapo, Henry and Whiteley, Walter},
@@ -54,7 +68,8 @@
 	Title = {Spaces of stresses, projections and parallel drawings for spherical polyhedra},
 	Url = {https://www.emis.de/journals/BAG/vol.35/no.2/},
 	Volume = {35},
-	Year = {1994}}
+	Year = {1994},
+	Bdsk-Url-1 = {https://www.emis.de/journals/BAG/vol.35/no.2/}}
 
 @article{cw-psspp-93,
 	Author = {Crapo, Henry and Whiteley, Walter},
@@ -66,7 +81,8 @@
 	Title = {Plane self stresses and projected polyhedra {I:} {The} basic pattern},
 	Url = {http://www-iri.upc.es/people/ros/StructuralTopology/ST20/st20.html},
 	Volume = {20},
-	Year = {1993}}
+	Year = {1993},
+	Bdsk-Url-1 = {http://www-iri.upc.es/people/ros/StructuralTopology/ST20/st20.html}}
 
 @book{r-mam-58,
 	Author = {Rankine, William John Macquorn},
@@ -76,7 +92,8 @@
 	Publisher = {Richard Griffin and Co.},
 	Title = {A Manual of Applied Mechanics},
 	Url = {https://archive.org/details/manualappmecha00rankrich},
-	Year = {1858}}
+	Year = {1858},
+	Bdsk-Url-1 = {https://archive.org/details/manualappmecha00rankrich}}
 
 @article{m-rffdf-70,
 	Author = {Maxwell, James Clerk},
@@ -88,7 +105,8 @@
 	Pages = {1--40},
 	Title = {I.—{On} Reciprocal Figures, Frames, and Diagrams of Forces},
 	Volume = {26},
-	Year = {1870}}
+	Year = {1870},
+	Bdsk-Url-1 = {https://doi.org/10.1017/S0080456800026351}}
 
 @article{m-rfdf-64,
 	Author = {Maxwell, James Clerk},
@@ -100,7 +118,8 @@
 	Pages = {250--261},
 	Title = {XLV. {O}n reciprocal figures and diagrams of forces},
 	Volume = {27},
-	Year = {1864}}
+	Year = {1864},
+	Bdsk-Url-1 = {https://doi.org/10.1080/14786446408643663}}
 
 @article{s-cbcgg-76,
 	Author = {Smikun, L. B.},
