--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-04 17:10:45 -0500 
+%% Created for Jeff Erickson at 2019-03-13 14:15:15 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,27 @@
 
 @string{jeffe = {Jeff Erickson}}
 
+
+@inproceedings{ccwx,
+	Author = {Erickson, Jeff and Wang, Yipu},
+	Booktitle = {Proc. 33rd Int. Symp. Comput. Geom.},
+	Date-Added = {2019-03-13 14:09:53 +0100},
+	Date-Modified = {2019-03-13 14:14:01 +0100},
+	Pages = {34:1--34:17},
+	Series = {Leibniz International Proceedings in Informatics},
+	Title = {Topologically Trivial Closed Walks in Directed Surface Graphs},
+	Volume = {129},
+	Year = {2019}}
+
+@misc{ccw-arxiv,
+	Arxiv = {1812.01564v2},
+	Author = {Erickson, Jeff and Wang, Yipu},
+	Date-Added = {2019-03-13 13:53:32 +0100},
+	Date-Modified = {2019-03-13 13:55:21 +0100},
+	Howpublished = {Preprint},
+	Month = {March},
+	Title = {Topologically Trivial Closed Walks in Directed Surface Graphs},
+	Year = {2019}}
 
 @inproceedings{holiest,
 	Arxiv = {1804.01045},
