--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-02 15:38:09 -0500 
+%% Created for Jeff Erickson at 2019-03-13 15:07:28 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bt-lspdw-09,
+	Author = {Bradford, Phillip G. and Thomas, David A.},
+	Date-Added = {2019-03-13 14:45:14 +0100},
+	Date-Modified = {2019-03-13 14:49:46 +0100},
+	Doi = {10.1051/ita/2009011},
+	Journal = {RAIRO-Theor. Inf. Appl.},
+	Keywords = {CFG shortest paths, negative edges},
+	Number = {3},
+	Pages = {567--583},
+	Read = {1},
+	Title = {Labeled shortest paths in digraphs with negative and positive edge weights},
+	Volume = {43},
+	Year = {2009}}
 
 @mastersthesis{f-sscl-78,
 	Author = {Fajuyigbe, Oladele},
