--- a/compgeom.bib
+++ b/compgeom.bib
@@ -2,12 +2,49 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-12-05 12:06:05 -0600 
+%% Created for Jeff Erickson at 2019-03-21 09:34:58 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{b-vdch-79,
+	Author = {Brown, Kevin Q.},
+	Date-Added = {2019-03-21 09:34:19 +0100},
+	Date-Modified = {2019-03-21 09:34:55 +0100},
+	Doi = {10.1016/0020-0190(79)90074-7},
+	Journal = {Inform. Process. Lett.},
+	Number = {5},
+	Pages = {223--228},
+	Title = {Voronoi diagrams from convex hulls},
+	Volume = {9},
+	Year = {1979}}
+
+@article{a-pdpaa-87,
+	Author = {Aurenhammer, Franz},
+	Date-Added = {2019-03-21 09:30:38 +0100},
+	Date-Modified = {2019-03-21 09:31:12 +0100},
+	Doi = {10.1137/0216006},
+	Journal = {SIAM J. Comput.},
+	Number = {1},
+	Pages = {78--96},
+	Title = {Power diagrams: properties, algorithms and applications},
+	Volume = {16},
+	Year = {1987}}
+
+@article{es-vda-86,
+	Author = {Edelsbrunner, Herbert and Seidel, Raimund},
+	Date-Added = {2019-03-14 16:06:54 +0100},
+	Date-Modified = {2019-03-14 16:07:31 +0100},
+	Doi = {10.1007/BF02187681},
+	Journal = {Discrete Comput. Geom.},
+	Number = {1},
+	Pages = {25--44},
+	Title = {Voronoi diagrams and arrangements},
+	Volume = {1},
+	Year = {1986},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF02187681}}
 
 @article{b-cccda-94,
 	Author = {Brandt, Jonathan W.},
@@ -19,7 +56,8 @@
 	Pages = {116--124},
 	Title = {Convergence and continuity criteria for discrete approximations of the continuous planar skeletons},
 	Volume = {59},
-	Year = {1994}}
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.1006/ciun.1994.1007}}
 
 @article{r-odtr-94,
 	Author = {Rajan, V. T.},
