--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,94 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-03-11 13:55:26 +0100 
+%% Created for Jeff Erickson at 2019-03-22 10:18:22 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{m-cpmec-97,
+	Author = {Mohar, Bojan},
+	Date-Added = {2019-03-22 10:15:13 +0100},
+	Date-Modified = {2019-03-22 10:18:21 +0100},
+	Doi = {10.1007/BF02930499},
+	Journal = {Rend. Sem. Mat. Fis. Milano},
+	Number = {1},
+	Pages = {191--206},
+	Title = {Circle packings of maps---{The} {Euclidean} case},
+	Volume = {67},
+	Year = {1997}}
+
+@article{c-pvpec-91,
+	Author = {{Colin de Verdière}, Yves},
+	Date-Added = {2019-03-22 10:13:25 +0100},
+	Date-Modified = {2019-03-22 10:14:25 +0100},
+	Doi = {10.1007/BF01245096},
+	Journal = {Invent. Math.},
+	Number = {1},
+	Pages = {655--669},
+	Title = {Un principe variationnel pour les empilements de cercles},
+	Volume = {104},
+	Year = {1991}}
+
+@article{c-eccdm-89,
+	Author = {{Colin de Verdière}, Yves},
+	Date-Added = {2019-03-22 10:10:12 +0100},
+	Date-Modified = {2019-03-22 10:13:06 +0100},
+	Doi = {10.1515/form.1989.1.395},
+	Journal = {Forum Math.},
+	Number = {1},
+	Pages = {395--402},
+	Title = {Empilements de cercles: {Convergence} d’une méthode de point fixe},
+	Volume = {1},
+	Year = {1989}}
+
+@article{ggt-domam-06,
+	Author = {Gortler, Steven J. and Gotsman, Craig and Thurston, Dylan},
+	Date-Added = {2019-03-21 10:15:30 +0100},
+	Date-Modified = {2019-03-21 10:16:22 +0100},
+	Doi = {10.1016/j.cagd.2005.05.002},
+	Journal = {Comput. Aided Geom. Design},
+	Number = {2},
+	Pages = {83--112},
+	Title = {Discrete one-forms on meshes and applications to {3D} mesh parameterization},
+	Volume = {23},
+	Year = {2006},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.cagd.2005.05.002}}
+
+@inproceedings{sf-ppc2m-04,
+	Author = {Steiner, Dvir and Fischer, Anath},
+	Booktitle = {Proc. 9th ACM Symp. Solid Modeling Appl.},
+	Date-Added = {2019-03-21 10:11:33 +0100},
+	Date-Modified = {2019-03-21 10:15:14 +0100},
+	Pages = {83--91},
+	Title = {Planar parameterization for closed 2-manifold genus-1 meshes},
+	Year = {2004}}
+
+@article{c-crgtd-91,
+	Author = {{Colin de Verdière}, Yves},
+	Date-Added = {2019-03-21 10:07:43 +0100},
+	Date-Modified = {2019-03-21 10:08:28 +0100},
+	Journal = {L'Enseignment Mathématique},
+	Pages = {201--212},
+	Title = {Comment rendre géodésique une triangulation d'une surface?},
+	Volume = {37},
+	Year = {1991}}
+
+@incollection{rss-ps-08,
+	Author = {Rote, Günter and Santos, Fransisco and Streinu, Ileana},
+	Booktitle = {Essays on Discrete and Computational Geometry: Twenty Years Later},
+	Date-Added = {2019-03-14 15:48:23 +0100},
+	Date-Modified = {2019-03-14 15:52:59 +0100},
+	Editor = {Goodman, Jacob E. and Pach, János and Pollack, Richard},
+	Number = {453},
+	Pages = {343--410},
+	Publisher = {Amer. Math. Soc.},
+	Read = {1},
+	Series = {Contemporary Mathematics},
+	Title = {Pseudo-triangulations---a survey},
+	Year = {2008}}
 
 @book{c-frnsg-72,
 	Author = {Cremona, Luigi},
@@ -17,7 +99,8 @@
 	Publisher = {Tipografia di Giuseppe Bernardoni},
 	Title = {Le figure reciproche nella statica grafica},
 	Url = {http://www.luigi-cremona.it/download/Scritti_matematici/1872_statica_grafica.pdf},
-	Year = {1872}}
+	Year = {1872},
+	Bdsk-Url-1 = {http://www.luigi-cremona.it/download/Scritti_matematici/1872_statica_grafica.pdf}}
 
 @incollection{l-dafe-04,
 	Author = {Lovász, László},
@@ -55,7 +138,8 @@
 	Publisher = {Oxford Univ. Press},
 	Title = {Graphical Statics},
 	Url = {https://archive.org/details/graphicalstatic02cremgoog},
-	Year = {1890}}
+	Year = {1890},
+	Bdsk-Url-1 = {https://archive.org/details/graphicalstatic02cremgoog}}
 
 @article{cw-ssppd-94,
 	Author = {Crapo, Henry and Whiteley, Walter},
@@ -98,12 +182,12 @@
 @article{m-rffdf-70,
 	Author = {Maxwell, James Clerk},
 	Date-Added = {2019-03-11 12:00:22 +0100},
-	Date-Modified = {2019-03-11 12:01:42 +0100},
+	Date-Modified = {2019-03-21 10:09:46 +0100},
 	Doi = {10.1017/S0080456800026351},
 	Journal = {Trans. Royal Soc. Edinburgh},
 	Number = {1},
 	Pages = {1--40},
-	Title = {I.—{On} Reciprocal Figures, Frames, and Diagrams of Forces},
+	Title = {{On} Reciprocal Figures, Frames, and Diagrams of Forces},
 	Volume = {26},
 	Year = {1870},
 	Bdsk-Url-1 = {https://doi.org/10.1017/S0080456800026351}}
@@ -111,12 +195,12 @@
 @article{m-rfdf-64,
 	Author = {Maxwell, James Clerk},
 	Date-Added = {2019-03-11 11:50:53 +0100},
-	Date-Modified = {2019-03-11 12:10:40 +0100},
+	Date-Modified = {2019-03-21 10:09:53 +0100},
 	Doi = {10.1080/14786446408643663},
 	Journal = {Phil. Mag. (Ser. 4)},
 	Number = {182},
 	Pages = {250--261},
-	Title = {XLV. {O}n reciprocal figures and diagrams of forces},
+	Title = {On reciprocal figures and diagrams of forces},
 	Volume = {27},
 	Year = {1864},
 	Bdsk-Url-1 = {https://doi.org/10.1080/14786446408643663}}
