lots of updates related to ETR; lots of added DOIs

--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,12 +2,140 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-03-13 15:07:28 +0100 
+%% Created for Jeff Erickson at 2019-08-14 20:26:56 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{e-mms-90,
+	Author = {van Emde~Boas, Peter},
+	Booktitle = {Algorithms and Complexity},
+	Date-Added = {2019-08-14 20:25:40 -0500},
+	Date-Modified = {2019-08-14 20:26:55 -0500},
+	Doi = {10.1016/B978-0-444-88071-0.50006-0},
+	Pages = {1--36},
+	Read = {1},
+	Series = {Handbook of Theoretical Computer Science},
+	Title = {Machine Models and Simulations},
+	Volume = {1},
+	Year = {1990}}
+
+@article{cr-tbram-73,
+	Author = {Cook, Stephen A. and Reckhow, Robert A.},
+	Comments = {Defines the theoretical RAM model, ALGOL-RAM},
+	Date-Added = {2019-08-14 20:20:27 -0500},
+	Date-Modified = {2019-08-14 20:24:45 -0500},
+	Doi = {10.1016/S0022-0000(73)80029-7},
+	Journal = {J. Comput. Syst. Sci.},
+	Number = {4},
+	Pages = {354--375},
+	Title = {Time Bounded Random Access Machines},
+	Volume = {7},
+	Year = {1973}}
+
+@inproceedings{w-dnstm-83,
+	Author = {Wiedermann, Juraj},
+	Booktitle = {Information Processing 83, Proc. IFIP 9th World Computer Congress},
+	Date-Added = {2019-08-14 20:17:02 -0500},
+	Date-Modified = {2019-08-14 20:19:02 -0500},
+	Pages = {163--168},
+	Title = {Deterministic and Nondeterministic Simulation of the {RAM} by the {Turing} Machine},
+	Year = {1983}}
+
+@article{klp-fstmr-88,
+	Author = {Katajainen, Jyrki and van Leeuwen, Jan and Penttonen, Martti},
+	Date-Added = {2019-08-14 20:13:12 -0500},
+	Date-Modified = {2019-08-14 20:16:56 -0500},
+	Doi = {10.1137/0217005},
+	Journal = {{SIAM} J. Comput.},
+	Number = {1},
+	Pages = {77--88},
+	Read = {1},
+	Title = {Fast Simulation of Turing Machines by Random Access Machines},
+	Volume = {17},
+	Year = {1988}}
+
+@article{r-rrcs-91,
+	Author = {Robson, John M.},
+	Date-Added = {2019-08-14 20:10:13 -0500},
+	Date-Modified = {2019-08-14 20:11:18 -0500},
+	Doi = {10.1016/0304-3975(91)90177-4},
+	Journal = {Theoret. Comput. Sci.},
+	Number = {1},
+	Pages = {141--149},
+	Read = {1},
+	Title = {An {$O(T\log T)$} Reduction from {RAM} Computations to Satisfiability},
+	Volume = {82},
+	Year = {1991},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0304-3975(91)90177-4}}
+
+@article{pf-racm-79,
+	Author = {Pippenger, Nicholas and Fischer, Michael J.},
+	Date-Added = {2019-08-14 20:07:22 -0500},
+	Date-Modified = {2019-08-14 20:17:00 -0500},
+	Doi = {10.1145/322123.322138},
+	Journal = {J. Assoc. Comput. Mach.},
+	Number = {2},
+	Pages = {361--381},
+	Read = {1},
+	Title = {Relations among complexity measures},
+	Volume = {26},
+	Year = {1979},
+	Bdsk-Url-1 = {https://doi.org/10.1145/322123.322138}}
+
+@article{c-spfrnc-88,
+	Author = {Cook, Stephen A.},
+	Date-Added = {2019-08-14 20:00:20 -0500},
+	Date-Modified = {2019-08-14 20:06:28 -0500},
+	Doi = {10.1016/0020-0190(88)90152-4},
+	Journal = {Inf. Proc. Lett.},
+	Month = {11 January},
+	Number = {5},
+	Pages = {269--270},
+	Title = {Short propositional formulas represent nondeterministic computations},
+	Volume = {26},
+	Year = {1988},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0020-0190(88)90152-4}}
+
+@article{l-usp-73,
+	Author = {Levin, Leonid A.},
+	Booktitle = {Problems of Information Transmission},
+	Date-Added = {2019-08-14 19:44:17 -0500},
+	Date-Modified = {2019-08-14 20:16:58 -0500},
+	Journal = {Problems Inform. Transmission},
+	Number = {3},
+	Pages = {265--266},
+	Read = {0},
+	Title = {Universal Sequential Search Problems},
+	Url = {http://mi.mathnet.ru/eng/ppi/v9/i3/p115},
+	Volume = {9},
+	Year = {1973},
+	Bdsk-Url-1 = {http://mi.mathnet.ru/eng/ppi/v9/i3/p115}}
+
+@inproceedings{c-ctpp-71,
+	Author = {Cook, Stephen},
+	Booktitle = {Proc. 3rd Ann. Symp. Theory Comput.},
+	Date-Added = {2019-08-14 19:42:18 -0500},
+	Date-Modified = {2019-08-14 19:43:27 -0500},
+	Doi = {10.1145/800157.805047},
+	Pages = {151--158},
+	Read = {1},
+	Title = {The complexity of theorem proving procedures},
+	Year = {1971},
+	Bdsk-Url-1 = {https://doi.org/10.1145/800157.805047}}
+
+@book{k-fa-97,
+	Author = {Knuth, Donald E.},
+	Date-Added = {2019-08-14 19:37:29 -0500},
+	Date-Modified = {2019-08-14 19:40:25 -0500},
+	Publisher = {Addison-Wesley},
+	Read = {1},
+	Series = {The Art of Computer Programming},
+	Title = {Fundamental Algorithms},
+	Volume = {I},
+	Year = {1997}}
 
 @article{bt-lspdw-09,
 	Author = {Bradford, Phillip G. and Thomas, David A.},
@@ -21,7 +149,8 @@
 	Read = {1},
 	Title = {Labeled shortest paths in digraphs with negative and positive edge weights},
 	Volume = {43},
-	Year = {2009}}
+	Year = {2009},
+	Bdsk-Url-1 = {https://doi.org/10.1051/ita/2009011}}
 
 @mastersthesis{f-sscl-78,
 	Author = {Fajuyigbe, Oladele},
