--- a/compgeom.bib
+++ b/compgeom.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-03-21 09:34:58 +0100 
+%% Created for Jeff Erickson at 2019-08-11 14:01:56 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{aam-gpe-18,
+	Arxiv = {1704.06969},
+	Author = {Abrahamsen, Mikkel and Adamaszek, Anna and Miltzow, Tillmann},
+	Booktitle = {Proc. 50th Ann. ACM Symp. Theory Comput.},
+	Date-Added = {2019-08-10 15:54:15 -0500},
+	Date-Modified = {2019-08-10 15:56:13 -0500},
+	Doi = {10.1145/3188745.3188868},
+	Pages = {65--73},
+	Read = {1},
+	Title = {The art gallery problem is {$\exists\mathbb{R}$}-complete},
+	Year = {2018}}
 
 @article{b-vdch-79,
 	Author = {Brown, Kevin Q.},
@@ -19,7 +31,8 @@
 	Pages = {223--228},
 	Title = {Voronoi diagrams from convex hulls},
 	Volume = {9},
-	Year = {1979}}
+	Year = {1979},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0020-0190(79)90074-7}}
 
 @article{a-pdpaa-87,
 	Author = {Aurenhammer, Franz},
@@ -31,7 +44,8 @@
 	Pages = {78--96},
 	Title = {Power diagrams: properties, algorithms and applications},
 	Volume = {16},
-	Year = {1987}}
+	Year = {1987},
+	Bdsk-Url-1 = {https://doi.org/10.1137/0216006}}
 
 @article{es-vda-86,
 	Author = {Edelsbrunner, Herbert and Seidel, Raimund},
