--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2019-03-13 14:15:15 +0100 
+%% Created for Jeff Erickson at 2019-07-02 16:26:29 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,18 @@
 
 @string{jeffe = {Jeff Erickson}}
 
+
+@book{e-a-19,
+	Author = {Erickson, Jeff},
+	Date-Added = {2019-07-02 16:26:06 -0500},
+	Date-Modified = {2019-07-02 16:26:22 -0500},
+	Edition = {1st},
+	Isbn = {978-1-792-64483-2},
+	Keywords = {textbook},
+	Title = {Algorithms},
+	Url = {http://algorithms.wtf},
+	Year = {2019},
+	Bdsk-Url-1 = {http://algorithms.wtf}}
 
 @inproceedings{ccwx,
 	Author = {Erickson, Jeff and Wang, Yipu},
@@ -89,10 +101,12 @@
 	Author = {Chang, Hsien-Chih and Erickson, Jeff and Xu, Chao},
 	Booktitle = {Proc. 26th ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2017-01-02 23:35:38 +0000},
-	Date-Modified = {2017-01-02 23:37:07 +0000},
+	Date-Modified = {2019-03-22 13:13:28 +0100},
+	Doi = {10.1137/1.9781611973730.110},
 	Pages = {1655--1670},
 	Title = {Detecting weakly simple polygons},
-	Year = {2015}}
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1137/1.9781611973730.110}}
 
 @inproceedings{tangle,
 	Author = {Chang, Hsien-Chih and Erickson, Jeff},
@@ -370,7 +384,8 @@
 	Author = {Erickson, Jeff},
 	Booktitle = {Proc. 27th Ann. Symp. Comput. Geom.},
 	Date-Added = {2010-12-28 15:22:52 -0600},
-	Date-Modified = {2011-08-05 12:31:20 -0500},
+	Date-Modified = {2019-03-22 13:09:19 +0100},
+	Doi = {10.1145/1998196.1998231},
 	Pages = {236--243},
 	Title = {Shortest Non-trivial Cycles in Directed Surface Graphs},
 	Year = {2011},
@@ -380,7 +395,8 @@
 	Author = {Erickson, Jeff and Nayyeri, Amir},
 	Booktitle = {Proc. 22nd Ann. ACM-SIAM Symp. Discrete Algorithms},
 	Date-Added = {2010-11-09 02:01:20 -0600},
-	Date-Modified = {2011-10-03 09:11:03 +0000},
+	Date-Modified = {2019-03-22 13:07:25 +0100},
+	Doi = {10.1137/1.9781611973082.88},
 	Pages = {1166--1176},
 	Title = {Minimum cuts and shortest non-separating cycles via homology covers},
 	Year = {2011},
@@ -421,11 +437,12 @@
 	Author = {Chambers, Erin W. and Erickson, Jeff and Nayyeri, Amir},
 	Booktitle = {Proc. 25th Ann. Symp. Comput. Geom.},
 	Date-Added = {2010-05-20 15:54:38 -0500},
-	Date-Modified = {2010-05-20 15:54:49 -0500},
+	Date-Modified = {2019-03-22 13:08:35 +0100},
+	Doi = {10.1145/1542362.1542426},
 	Pages = {377--385},
 	Title = {Minimum cuts and shortest homologous cycles},
 	Year = {2009},
-	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/pubs/surfcut.html}}
+	Bdsk-Url-1 = {https://doi.org/10.1145/1542362.1542426}}
 
 @inproceedings{surflowx,
 	Author = {Chambers, Erin W. and Erickson, Jeff and Nayyeri, Amir},
@@ -471,13 +488,15 @@
 	Arxiv = {1202.0314},
 	Author = {Cabello, Sergio and Chambers, Erin W. and Erickson, Jeff},
 	Date-Added = {2008-12-06 23:47:21 -0600},
-	Date-Modified = {2013-11-08 06:42:50 +0000},
+	Date-Modified = {2019-03-22 13:03:53 +0100},
+	Doi = {10.1137/120864271},
 	Journal = {SIAM J. Comput.},
 	Number = {4},
 	Pages = {1542--1571},
 	Title = {Multiple-Source Shortest Paths in Embedded Graphs},
 	Volume = {42},
-	Year = {2013}}
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1137/120864271}}
 
 @inproceedings{eellipse,
 	Author = {Devillers, Olivier and Erickson, Jeff and Goaoc, Xavier},
@@ -576,7 +595,8 @@
 @article{tight,
 	Author = {Cabello, Sergio and DeVos, Matt and Erickson, Jeff and Mohar, Bojan},
 	Date-Added = {2008-12-06 22:53:30 -0600},
-	Date-Modified = {2010-10-18 16:03:30 -0500},
+	Date-Modified = {2019-03-22 13:04:41 +0100},
+	Doi = {10.1145/1824777.1824781},
 	Journal = {ACM Trans. Algorithms},
 	Number = {4},
 	Pages = {article 61},
@@ -588,25 +608,29 @@
 @article{splitting,
 	Author = {Chambers, Erin W. and {Colin de Verdière}, Éric and Erickson, Jeff and Lazarus, Francis and Whittlesey, Kim},
 	Date-Added = {2008-12-06 22:52:55 -0600},
-	Date-Modified = {2008-12-06 22:53:06 -0600},
+	Date-Modified = {2019-03-22 13:07:59 +0100},
+	Doi = {10.1016/j.comgeo.2007.10.010},
 	Journal = {Comput. Geom. Theory Appl.},
 	Keywords = {graphs},
 	Number = {1--2},
 	Pages = {94--110},
 	Title = {Splitting (complicated) surfaces is hard},
 	Volume = {41},
-	Year = {2008}}
+	Year = {2008},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.comgeo.2007.10.010}}
 
 @article{octagons,
 	Author = {{Colin de Verdière}, Éric and Erickson, Jeff},
 	Date-Added = {2008-12-06 22:52:40 -0600},
-	Date-Modified = {2011-03-22 23:28:39 -0500},
+	Date-Modified = {2019-03-22 13:06:06 +0100},
+	Doi = {10.1137/090761653},
 	Journal = {SIAM J. Comput.},
 	Number = {8},
 	Pages = {3784--3813},
 	Title = {Tightening non-simple paths and cycles on surfaces},
 	Volume = {39},
-	Year = {2010}}
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1137/090761653}}
 
 @article{realizing,
 	Author = {Demaine, Erik D. and Erickson, Jeff and Kri\c{z}anc, Danny and Meijer, Henk and Morin, Pat and Overmars, Mark and Whitesides, Sue},
@@ -861,11 +885,15 @@
 
 @article{schema,
 	Author = {Erickson, Jeff and Har-Peled, Sariel},
+	Date-Modified = {2019-03-22 13:00:24 +0100},
+	Doi = {10.1007/s00454-003-2948-z},
 	Journal = {Discrete Comput. Geom.},
+	Number = {1},
 	Pages = {37--59},
 	Title = {Optimally cutting a surface into a disk},
-	Volume = 31,
-	Year = 2004}
+	Volume = {31},
+	Year = {2004},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-003-2948-z}}
 
 @article{local,
 	Author = {Erickson, Jeff},
